--- a/Desafios/Site android/index.html
+++ b/Desafios/Site android/index.html
@@ -78,7 +78,7 @@
         </ul>
         <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao <strong>Android 10</strong>.</p>
 
-        <p>Acesse aqui o site <a href="#" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+        <p>Acesse aqui o site <a href="https://www.android.com/intl/pt_br/what-is-android/" class="externo" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
     </aside>
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
 </main>    
