--- a/Exercicios/Exercicio - 022/fundo001.html
+++ b/Exercicios/Exercicio - 022/fundo001.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>images</title>
     <style>
+        body {
+            background-image: url(imagens/pexels-szaboviktor-3227984.jpg);
+        }
         div.quadrado {
             display: inline-block;
             border: 2px solid black;
@@ -21,7 +24,7 @@
             background-image: linear-gradient(to bottom, yellow, red);
         }
         div#q3 {
-            background-image: url('imagens/._wallpaper001.jpg');
+            background-image: url(imagens/pexels-szaboviktor-3227984.jpg);
         }
     </style>
 </head>
