--- a/Exercicios/Exercicio - 022/fundo 002.html
+++ b/Exercicios/Exercicio - 022/fundo 002.html
@@ -8,7 +8,7 @@
         body {
             background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/fs/2d62b374314395.5fee3376ac9d0.jpg');
             background-size: 200px 300px;
-            background-repeat:repeat-y;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
