--- a/Exercicios/Exercicio - 022/fundo006.html
+++ b/Exercicios/Exercicio - 022/fundo006.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aaaa</title>
+    <title>fundo fixo de</title>
     <style>
         body {
-            height: 100vh;
             background-color: black;
-            background-image: url(imagens/pexels-szaboviktor-3227984.jpg);
+            background-image: url('imagens/pexels-szaboviktor-3227984.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            background: black url('imagens/pexels-szaboviktor-3227984.jpg') center center no-repeat fixed;
+            background-size: cover;
+            height: 100vh;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
